Closed Bug 364885 Opened 18 years ago Closed 18 years ago

Calling ctx.putImageData() doesn't redraw

Categories

(Core :: Graphics: Canvas2D, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: takenspc, Assigned: takenspc)

Details

Attachments

(2 files)

Calling ctx.putImageData() doesn't redraw even if it succeeded.
Attached patch Patch rv.1.0Splinter Review
Assignee: nobody → taken.spc
Status: NEW → ASSIGNED
Attachment #249568 - Flags: review?(vladimir)
Attached file A Testcase
A testcase for the putImageData(). Without the patch, the canvas is redrawn when only changing the tab, etc...
Comment on attachment 249568 [details] [diff] [review] Patch rv.1.0 Oy! Good catch, thanks.
Attachment #249568 - Flags: review?(vladimir) → review+
Comment on attachment 249568 [details] [diff] [review] Patch rv.1.0 vlad: thanks your review. Could you super-review my patch?
Attachment #249568 - Flags: superreview?(vladimir)
If the super-review isn't required, I would like to check-in. # I don't have the permission, I will ask masayuki-san for the check-in.
Comment on attachment 249568 [details] [diff] [review] Patch rv.1.0 Whoops, sorry, I thought I marked sr as well. I can check this in for you as well, or Masayuki-san can -- let me know if you need me to do it.
Attachment #249568 - Flags: superreview?(vladimir) → superreview+
checked-in.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: