Bug 364885 Calling ctx.putImageData() doesn't redraw. patch by KUROSAWA, Takeshi (taken) <taken.spc@gmail.com> r+sr=vlad